aggiunto prima parte header

--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
 
-<header>
-    <div class="boxed">
-        <div class="flex-container">
-            <nav class="logo">Logo</nav>
-            <nav class="link">Link Link Link LInk Link</nav>
-            <nav class="login">Login</nav>
+    <header>
+        <div class="boxed flex-container" id="header-container">
+            <div class="nav-logo dashed">Logo</div>
+            <div class="nav-links dashed">Link Link Link Link Link</div>
+            <div class="nav-login dashed">Login</div>
         </div>
-    </div>
-</header>
+    </header>
 
 
 
