--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
             <div class="nav-links dashed">Link Link Link Link Link</div>
             <div class="nav-login dashed">Login</div>
         </div>
-    </header>
+        <div class="  flex-container-blue">
+            <div class="boxed nav-pink dashed"></div>
+        </div>
+        
+     </header>
 
 
 
