completato il main

--- a/index.html
+++ b/index.html
@@ -19,10 +19,34 @@
         </div>
         
      </header>
+<main>  
+     <section>
+        <div class="boxed flex-container-white">
+            <div class="big-column dashed"></div>
+            <div class="small-column dashed"></div>
+        </div>
+     </section>
+     <section class="section-gray">
+        <div class="boxed flex-container-gray">
+            <div class="small-column dashed"></div>
+            <div class="big-column dashed"></div>
+        </div>
+     </section>
+     <section>
+        <div class="boxed flex-container-white">
+            <div class="big-column dashed"></div>
+            <div class="small-column dashed"></div>
+        </div>
+     </section>
+     <section class="section-gray">
+        <div class="boxed flex-container-gray">
+            <div class="big-column-green dashed"></div>
+        </div>
+     </section>
 
+</main>
 
-
-<main></main>   
+ 
 <footer></footer>
 
 
